small refactor (outdated comments etc) + brighter default select blue

--- a/example.conf
+++ b/example.conf
@@ -1,4 +1,5 @@
-# Uncomment for AZERTY:
+# Uncomment settings you want to apply
+# for AZERTY:
 # menu_translate = AZQW QWAZ
 
 # for QWERTZ:
@@ -10,5 +11,12 @@
 # Nails are too small:
 # point_radius = 2
 
+# select color more muted:
+# select_color = 64 0 192
+
+# select shapes yellow:
+# select_color = 200 150 0
+
 # A full list of settable parameters is available in the '# Configuration' section of the manual.
 # Don't forget to put this file into ~/.qwerasdf after making your changes and relaunching the program for the configuration to take effect
+
